--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    // S3
+    implementation platform("software.amazon.awssdk:bom:2.25.4")
+    implementation 'software.amazon.awssdk:s3'
+    implementation 'software.amazon.awssdk:http-client-spi:2.25.4'
+
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
