fix: ec2 배포를 위한 변수명 대문자로 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=RUNTIME
 
 # h2 DB
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=${aws_rds_url}
-spring.datasource.username=${aws_rds_user}
-spring.datasource.password=${aws_rds_password}
+spring.datasource.url=${AWS_RDS_URL}
+spring.datasource.username=${AWS_RDS_USER}
+spring.datasource.password=${AWS_RDS_PASSWORD}
 spring.h2.console.enabled=true
 
 # S3
